@@ -1,15 +1,10 @@
 package kr.bb.delivery;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.groups.Tuple.tuple;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.verify;
 
 import bloomingblooms.response.SuccessResponse;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 import kr.bb.delivery.client.OrderServiceClient;
 import kr.bb.delivery.dto.request.DeliveryInsertRequestDto;
 import kr.bb.delivery.dto.request.DeliveryUpdateRequestDto;
@@ -19,60 +14,38 @@ import kr.bb.delivery.entity.DeliveryStatus;
 import kr.bb.delivery.repository.DeliveryRepository;
 import kr.bb.delivery.service.DeliveryService;
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.Mockito;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.transaction.annotation.Transactional;
 
-@ExtendWith(MockitoExtension.class)
+@SpringBootTest
+@Transactional
 public class DeliveryServiceTest {
-  @InjectMocks private DeliveryService deliveryService;
-  @Mock private DeliveryRepository deliveryRepository;
-  @Mock private OrderServiceClient orderServiceClient;
+  @Autowired private DeliveryService deliveryService;
+  @Autowired private DeliveryRepository deliveryRepository;
+  @MockBean private OrderServiceClient orderServiceClient;
+
+  @BeforeEach
+  void setup() {
+    deliveryService = new DeliveryService(deliveryRepository, orderServiceClient);
+  }
 
   @Test
   @DisplayName("배송 정보 생성 service 테스트")
   public void createDeliveryService() {
     // given
-    DeliveryInsertRequestDto dto =
-        DeliveryInsertRequestDto.builder()
-            .ordererName("홍길동")
-            .ordererPhoneNumber("010-1111-1111")
-            .ordererEmail("abc@example.com")
-            .recipientName("이순신")
-            .recipientPhoneNumber("010-2222-2222")
-            .zipcode("05231")
-            .roadName("서울시 송파구 올림픽로 23가길 22-1")
-            .addressDetail("401호")
-            .request("빠른 배송 부탁드려요~")
-            .deliveryCost(5000L)
-            .build();
-
-    Delivery mockDelivery =
-        Delivery.builder()
-            .deliveryId(1L)
-            .deliveryOrdererName("홍길동")
-            .deliveryOrdererPhoneNumber("010-1111-1111")
-            .deliveryOrdererEmail("abc@example.com")
-            .deliveryRecipientName("이순신")
-            .deliveryRecipientPhoneNumber("010-2222-2222")
-            .deliveryZipcode("05231")
-            .deliveryRoadName("서울시 송파구 올림픽로 23가길 22-1")
-            .deliveryAddressDetail("401호")
-            .deliveryRequest("빠른 배송 부탁드려요~")
-            .deliveryCost(5000L)
-            .build();
-
-    //        Mockito.when(deliveryRepository.save(any(Delivery.class))).thenReturn(mockDelivery);
-    given(deliveryRepository.save(any())).willReturn(mockDelivery);
+    DeliveryInsertRequestDto dto = createInsertRequestDto();
 
     // when
     Delivery savedDelivery = deliveryService.createDelivery(dto);
 
     // then
-    Assertions.assertEquals(savedDelivery.getDeliveryId(), 1);
+    Assertions.assertNotNull(savedDelivery.getDeliveryId());
     Assertions.assertNull(savedDelivery.getDeliveryTrackingNumber());
     Assertions.assertEquals(savedDelivery.getDeliveryOrdererName(), "홍길동");
     Assertions.assertEquals(savedDelivery.getDeliveryOrdererPhoneNumber(), "010-1111-1111");
@@ -85,79 +58,34 @@ public class DeliveryServiceTest {
     Assertions.assertEquals(savedDelivery.getDeliveryRequest(), "빠른 배송 부탁드려요~");
     Assertions.assertEquals(savedDelivery.getDeliveryCost(), 5000L);
     Assertions.assertEquals(savedDelivery.getDeliveryStatus(), DeliveryStatus.PENDING);
-
-    verify(deliveryRepository).save(any());
   }
 
   @Test
   @DisplayName("배송 정보 조회")
   void getAllDeliveryInfo() {
     // given
-    Delivery delivery1 =
-        Delivery.builder()
-            .deliveryId(1L)
-            .deliveryOrdererName("홍길동")
-            .deliveryOrdererPhoneNumber("010-1111-1111")
-            .deliveryOrdererEmail("abc@example.com")
-            .deliveryRecipientName("이순신")
-            .deliveryRecipientPhoneNumber("010-2222-2222")
-            .deliveryZipcode("05231")
-            .deliveryRoadName("서울시 송파구 올림픽로 23가길 22-1")
-            .deliveryAddressDetail("401호")
-            .deliveryRequest("빠른 배송 부탁드려요~")
-            .deliveryCost(5000L)
-            .build();
+    Delivery delivery1 = createDeliveryEntity("홍길동", "010-1111-1111", DeliveryStatus.PENDING);
+    Delivery delivery2 = createDeliveryEntity("이순신", "010-2222-2222", DeliveryStatus.PENDING);
+    deliveryRepository.saveAll(List.of(delivery1, delivery2));
 
-    Delivery delivery2 =
-        Delivery.builder()
-            .deliveryId(2L)
-            .deliveryOrdererName("홍길동")
-            .deliveryOrdererPhoneNumber("010-1111-1111")
-            .deliveryOrdererEmail("abc@example.com")
-            .deliveryRecipientName("이순신")
-            .deliveryRecipientPhoneNumber("010-2222-2222")
-            .deliveryZipcode("05231")
-            .deliveryRoadName("서울시 송파구 올림픽로 23가길 22-1")
-            .deliveryAddressDetail("401호")
-            .deliveryRequest("빠른 배송 부탁드려요~")
-            .deliveryCost(5000L)
-            .build();
-
-    List<Long> deliveryIds = Arrays.asList(1L, 2L);
-
-    //
-    // Mockito.when(deliveryRepository.findAllById(deliveryIds)).thenReturn(List.of(delivery1,
-    // delivery2));
-    given(deliveryRepository.findAllById(deliveryIds)).willReturn(List.of(delivery1, delivery2));
+    List<Delivery> foundDeliveries =
+        deliveryRepository.findAllById(
+            List.of(delivery1.getDeliveryId(), delivery2.getDeliveryId()));
+    List<Long> deliveryIds =
+        foundDeliveries.stream().map(Delivery::getDeliveryId).collect(Collectors.toList());
 
     // when
     List<DeliveryReadResponseDto> dtos = deliveryService.getDelivery(deliveryIds);
 
     // then
-    assertThat(dtos)
-        .hasSize(2)
-        .extracting("deliveryId", "ordererName")
-        .containsExactlyInAnyOrder(tuple(1L, "홍길동"), tuple(2L, "홍길동"));
+    assertThat(dtos).hasSize(2).extracting("ordererName").containsExactlyInAnyOrder("홍길동", "이순신");
   }
 
   @Test
   @DisplayName("배송 정보 수정")
   void updateDelivery() {
     // given
-    Delivery savedDelivery =
-        Delivery.builder()
-            .deliveryId(1L)
-            .deliveryOrdererName("홍길동")
-            .deliveryOrdererPhoneNumber("010-1111-1111")
-            .deliveryOrdererEmail("abc@example.com")
-            .deliveryRecipientName("이순신")
-            .deliveryRecipientPhoneNumber("010-2222-2222")
-            .deliveryZipcode("05231")
-            .deliveryRoadName("서울시 송파구 올림픽로 23가길 22-1")
-            .deliveryAddressDetail("401호")
-            .deliveryRequest("빠른 배송 부탁드려요~")
-            .deliveryCost(5000L)
-            .build();
+    Delivery delivery = createDeliveryEntity("홍길동", "010-1111-1111", DeliveryStatus.PENDING);
 
     DeliveryUpdateRequestDto dto =
         DeliveryUpdateRequestDto.builder()
@@ -168,31 +96,13 @@ public class DeliveryServiceTest {
             .addressDetail("1701호")
             .build();
 
-    Delivery modifiedDelivery =
-        Delivery.builder()
-            .deliveryId(1L)
-            .deliveryOrdererName("홍길동")
-            .deliveryOrdererPhoneNumber("010-1111-1111")
-            .deliveryOrdererEmail("abc@example.com")
-            .deliveryRecipientName("손흥민")
-            .deliveryRecipientPhoneNumber("010-5555-5555")
-            .deliveryZipcode("04342")
-            .deliveryRoadName("서울시 용산구 한남동 독서당로 111-2")
-            .deliveryAddressDetail("1701호")
-            .deliveryRequest("빠른 배송 부탁드려요~")
-            .deliveryCost(5000L)
-            .build();
-
-    Long deliveryId = 1L;
-
-    given(deliveryRepository.findById(any())).willReturn(Optional.ofNullable(savedDelivery));
-    given(deliveryRepository.save(any())).willReturn(modifiedDelivery);
+    Delivery savedDelivery = deliveryRepository.save(delivery);
 
     // when
-    Delivery updatedDelivery = deliveryService.updateDelivery(deliveryId, dto);
+    Delivery updatedDelivery = deliveryService.updateDelivery(savedDelivery.getDeliveryId(), dto);
 
     // then
-    Assertions.assertEquals(updatedDelivery.getDeliveryId(), 1L);
+    Assertions.assertNotNull(updatedDelivery.getDeliveryId());
     Assertions.assertEquals(updatedDelivery.getDeliveryRecipientName(), "손흥민");
     Assertions.assertEquals(updatedDelivery.getDeliveryZipcode(), "04342");
     Assertions.assertEquals(updatedDelivery.getDeliveryRoadName(), "서울시 용산구 한남동 독서당로 111-2");
@@ -203,46 +113,16 @@ public class DeliveryServiceTest {
   @DisplayName("배송 상태 변경")
   void modifyDeliveryStatus() {
     // given
-    Delivery savedDelivery =
-        Delivery.builder()
-            .deliveryId(1L)
-            .deliveryOrdererName("홍길동")
-            .deliveryOrdererPhoneNumber("010-1111-1111")
-            .deliveryOrdererEmail("abc@example.com")
-            .deliveryRecipientName("이순신")
-            .deliveryRecipientPhoneNumber("010-2222-2222")
-            .deliveryZipcode("05231")
-            .deliveryRoadName("서울시 송파구 올림픽로 23가길 22-1")
-            .deliveryAddressDetail("401호")
-            .deliveryRequest("빠른 배송 부탁드려요~")
-            .deliveryStatus(DeliveryStatus.PENDING)
-            .deliveryCost(5000L)
-            .build();
-
-    Delivery modifiedDelivery =
-        Delivery.builder()
-            .deliveryId(1L)
-            .deliveryOrdererName("홍길동")
-            .deliveryOrdererPhoneNumber("010-1111-1111")
-            .deliveryOrdererEmail("abc@example.com")
-            .deliveryRecipientName("손흥민")
-            .deliveryRecipientPhoneNumber("010-5555-5555")
-            .deliveryZipcode("04342")
-            .deliveryRoadName("서울시 용산구 한남동 독서당로 111-2")
-            .deliveryAddressDetail("1701호")
-            .deliveryRequest("빠른 배송 부탁드려요~")
-            .deliveryCost(5000L)
-            .deliveryStatus(DeliveryStatus.PROCESSING)
-            .build();
-
-    SuccessResponse<Long> mockResponse = new SuccessResponse<>("200", "Success", 1L);
+    Delivery delivery = createDeliveryEntity("홍길동", "010-1111-1111", DeliveryStatus.PENDING);
 
     Long deliveryOrderId = 1L;
     String status = "PROCESSING";
 
-    given(deliveryRepository.findById(any())).willReturn(Optional.ofNullable(savedDelivery));
-    given(deliveryRepository.save(any())).willReturn(modifiedDelivery);
-    given(orderServiceClient.getDeliveryId(deliveryOrderId)).willReturn(mockResponse);
+    Long savedDeliveryId = deliveryRepository.save(delivery).getDeliveryId();
+    delivery.modifyStatus(status);
+
+    SuccessResponse<Long> mockResponse = new SuccessResponse<>("200", "Success", savedDeliveryId);
+    Mockito.when(orderServiceClient.getDeliveryId(deliveryOrderId)).thenReturn(mockResponse);
 
     // when
     Delivery modifiedStatusDelivery = deliveryService.changeStatus(deliveryOrderId, status);
@@ -252,70 +132,70 @@ public class DeliveryServiceTest {
   }
 
   @Test
-  @DisplayName("잘못된 값으로 배송상태 변경은 불가능하다")
+  @DisplayName("잘못된 값으로 배송상태 변경 막기")
   void modifyWithWrongDeliveryStatus() {
     // given
-    Delivery savedDelivery =
-        Delivery.builder()
-            .deliveryId(1L)
-            .deliveryOrdererName("홍길동")
-            .deliveryOrdererPhoneNumber("010-1111-1111")
-            .deliveryOrdererEmail("abc@example.com")
-            .deliveryRecipientName("이순신")
-            .deliveryRecipientPhoneNumber("010-2222-2222")
-            .deliveryZipcode("05231")
-            .deliveryRoadName("서울시 송파구 올림픽로 23가길 22-1")
-            .deliveryAddressDetail("401호")
-            .deliveryRequest("빠른 배송 부탁드려요~")
-            .deliveryStatus(DeliveryStatus.PENDING)
-            .deliveryCost(5000L)
-            .build();
+    Delivery delivery = createDeliveryEntity("홍길동", "010-1111-1111", DeliveryStatus.PENDING);
+    Long savedDeliveryId = deliveryRepository.save(delivery).getDeliveryId();
 
-    SuccessResponse<Long> mockResponse = new SuccessResponse<>("200", "Success", 1L);
-
-    Long deliveryOrderId = 1L;
+    Long orderId = 1L;
     String status = "PROCESSED";
 
-    given(deliveryRepository.findById(any())).willReturn(Optional.ofNullable(savedDelivery));
-    given(orderServiceClient.getDeliveryId(deliveryOrderId)).willReturn(mockResponse);
+    SuccessResponse<Long> mockResponse = new SuccessResponse<>("200", "Success", savedDeliveryId);
+    Mockito.when(orderServiceClient.getDeliveryId(orderId)).thenReturn(mockResponse);
 
     // when, then
     Assertions.assertThrows(
-        IllegalArgumentException.class,
-        () -> deliveryService.changeStatus(deliveryOrderId, status));
+        IllegalArgumentException.class, () -> deliveryService.changeStatus(orderId, status));
   }
 
   @Test
   @DisplayName("이전 단계의 배송 상태로 변경은 불가능하다")
   void modifyWithPreviousDeliveryStatus() {
     // given
-    Delivery savedDelivery =
-        Delivery.builder()
-            .deliveryId(1L)
-            .deliveryOrdererName("홍길동")
-            .deliveryOrdererPhoneNumber("010-1111-1111")
-            .deliveryOrdererEmail("abc@example.com")
-            .deliveryRecipientName("이순신")
-            .deliveryRecipientPhoneNumber("010-2222-2222")
-            .deliveryZipcode("05231")
-            .deliveryRoadName("서울시 송파구 올림픽로 23가길 22-1")
-            .deliveryAddressDetail("401호")
-            .deliveryRequest("빠른 배송 부탁드려요~")
-            .deliveryStatus(DeliveryStatus.PROCESSING)
-            .deliveryCost(5000L)
-            .build();
+    Delivery delivery = createDeliveryEntity("홍길동", "010-1111-1111", DeliveryStatus.PROCESSING);
+    Long savedDeliveryId = deliveryRepository.save(delivery).getDeliveryId();
 
-    SuccessResponse<Long> mockResponse = new SuccessResponse<>("200", "Success", 1L);
-
-    Long deliveryOrderId = 1L;
+    Long orderId = 1L;
     String status = "PENDING";
 
-    given(deliveryRepository.findById(any())).willReturn(Optional.ofNullable(savedDelivery));
-    given(orderServiceClient.getDeliveryId(deliveryOrderId)).willReturn(mockResponse);
+    SuccessResponse<Long> mockResponse = new SuccessResponse<>("200", "Success", savedDeliveryId);
+    Mockito.when(orderServiceClient.getDeliveryId(orderId)).thenReturn(mockResponse);
 
     // when, then
     Assertions.assertThrows(
-        IllegalStateException.class,
-        () -> deliveryService.changeStatus(deliveryOrderId, status));
+        IllegalStateException.class, () -> deliveryService.changeStatus(orderId, status));
+  }
+
+  private DeliveryInsertRequestDto createInsertRequestDto() {
+    return DeliveryInsertRequestDto.builder()
+        .ordererName("홍길동")
+        .ordererPhoneNumber("010-1111-1111")
+        .ordererEmail("abc@example.com")
+        .recipientName("이순신")
+        .recipientPhoneNumber("010-2222-2222")
+        .zipcode("05231")
+        .roadName("서울시 송파구 올림픽로 23가길 22-1")
+        .addressDetail("401호")
+        .request("빠른 배송 부탁드려요~")
+        .deliveryCost(5000L)
+        .build();
+  }
+
+  private Delivery createDeliveryEntity(
+      String ordererName, String ordererPhoneNumber, DeliveryStatus status) {
+    return Delivery.builder()
+        .deliveryOrdererName(ordererName)
+        .deliveryOrdererPhoneNumber(ordererPhoneNumber)
+        .deliveryOrdererEmail("abc@example.com")
+        .deliveryRecipientName("이순신")
+        .deliveryRecipientPhoneNumber("010-2222-2222")
+        .deliveryZipcode("05231")
+        .deliveryRoadName("서울시 송파구 올림픽로 23가길 22-1")
+        .deliveryAddressDetail("401호")
+        .deliveryRequest("빠른 배송 부탁드려요~")
+        .deliveryStatus(status)
+        .deliveryCost(5000L)
+        .build();
   }
 }
